# fury-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: agent.md  example.md  history_compactor.md  history_manager.md  tts.md
examples/: README.md  chat.py  cron_tasks.py  history_compaction.py  interruption.py  memory_chat.py  persistent_chat.py  tts.py  voice_chat.py
examples/coding-assistant/: coding_assistant.py
src/fury/: __init__.py  agent.py  historycompactor.py  historymanager.py  llm_client.py  memory.py  multimodal.py  openai_httpx.py  runtime.py  tools.py  types.py
src/fury/utils/: neutts_minimal.py  tts.py  validation.py  voice.py
tests/: conftest.py  test_agent_features.py  test_chat_loop.py  test_coding_assistant_features.py  test_console_features.py  test_history_compactor.py  test_history_features.py  test_memory_features.py  test_openai_httpx.py  test_stream_errors.py  test_tool_error_handling.py  test_transcript_persistence.py
