[project]
name = "fury-sdk"
version = "0.0.13"
description = "A flexible AI agent library with tool support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "requests",
    "termcolor",
    "numpy",
    "soundfile",
    "openai-whisper",
    "apscheduler>=3.11.2",
]

[project.optional-dependencies]
examples = [
    "apscheduler",
    "pydantic",
    "python-dotenv",
]
test = [
    "pytest",
]
tts = [
    "numpy",
    "torch",
    "phonemizer",
    "llama-cpp-python",
    "neucodec",
    "onnxruntime>=1.17.3,<1.24",
    "huggingface-hub>=1.4.1",
    "sounddevice>=0.5.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fury"]
