[project]
name = "fury-sdk"
version = "0.0.14"
description = "A flexible AI agent library with tool support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "termcolor",
]

[project.optional-dependencies]
examples = [
    "apscheduler",
    "pydantic",
    "python-dotenv",
]
test = [
    "pytest",
]
voice = [
    "faster-whisper",
    "numpy",
    "sounddevice>=0.5.5",
    "soundfile",
]
tts = [
    "numpy",
    "soundfile",
    "torch",
    "phonemizer",
    "llama-cpp-python",
    "neucodec",
    "onnxruntime>=1.17.3,<1.24",
    "huggingface-hub>=1.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fury"]
