[project]
name = "fury-sdk"
version = "0.2.1"
description = "A flexible AI agent library with tool support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "openai>=1.0.0",
    "python-dotenv>=1.2.1",
    "termcolor",
]

[project.optional-dependencies]
examples = [
    "pydantic",
    "python-dotenv",
]
test = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fury"]
